crates/cribo/tests/snapshots/bundled_code@forward_reference_requests_compat.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_requests_compat/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('myrequests', '_cribo_init___cribo_a5ac5e_myrequests', 'myrequests', True)
_cribo_finder.register('myrequests.utils', '_cribo_init___cribo_ce8acb_myrequests_utils', 'myrequests_utils', False)
_cribo_finder.register('myrequests.exceptions', '_cribo_init___cribo_530a30_myrequests_exceptions', 'myrequests_exceptions', False)
_cribo_finder.register('myrequests.cookies', '_cribo_init___cribo_135ee1_myrequests_cookies', 'myrequests_cookies', False)
_cribo_finder.register('myrequests.compat', '_cribo_init___cribo_5ad29b_myrequests_compat', 'myrequests_compat', False)
myrequests_compat = _cribo.types.SimpleNamespace(__name__='myrequests.compat', __initializing__=False, __initialized__=False)
_cribo_finder.bind('myrequests.compat', myrequests_compat)
def _cribo_init___cribo_5ad29b_myrequests_compat(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'myrequests'
    _cribo_self.__doc__ = 'Compat module that provides base classes and utilities used by other modules.'
    """Compat module that provides base classes and utilities used by other modules."""
    try:
        import simplejson as json
        myrequests_compat.json = json
    except ImportError:
        json = _cribo.json
        _cribo_self.json = json
    if hasattr(json, "JSONDecodeError"):
        JSONDecodeError = json.JSONDecodeError
        myrequests_compat.JSONDecodeError = JSONDecodeError
    else:
        JSONDecodeError = ValueError
        myrequests_compat.JSONDecodeError = JSONDecodeError
    MutableMapping = _cribo.collections.abc.MutableMapping
    _cribo_self.MutableMapping = MutableMapping
    Mapping = _cribo.collections.abc.Mapping
    _cribo_self.Mapping = Mapping
    cookielib = _cribo.http.cookiejar
    _cribo_self.cookielib = cookielib
    builtin_str = str
    _cribo_self.builtin_str = builtin_str
    basestring = str, bytes
    _cribo_self.basestring = basestring
    urlparse = _cribo.urllib.parse.urlparse
    _cribo_self.urlparse = urlparse
    urlunparse = _cribo.urllib.parse.urlunparse
    _cribo_self.urlunparse = urlunparse
    urljoin = _cribo.urllib.parse.urljoin
    _cribo_self.urljoin = urljoin
    _cribo_self.MutableMapping = _cribo.collections.abc.MutableMapping
    _cribo_self.Mapping = _cribo.collections.abc.Mapping
    _cribo_self.cookielib = _cribo.http.cookiejar
    _cribo_self.urlparse = _cribo.urllib.parse.urlparse
    _cribo_self.urlunparse = _cribo.urllib.parse.urlunparse
    _cribo_self.urljoin = _cribo.urllib.parse.urljoin
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
myrequests_compat.__init__ = _cribo_init___cribo_5ad29b_myrequests_compat
myrequests = _cribo.types.SimpleNamespace(__name__='myrequests', __initializing__=False, __initialized__=False, __path__=[])
myrequests.compat = myrequests_compat
myrequests_cookies = _cribo.types.SimpleNamespace(__name__='myrequests.cookies', __initializing__=False, __initialized__=False)
_cribo_finder.bind('myrequests.cookies', myrequests_cookies)
myrequests.cookies = myrequests_cookies
myrequests_exceptions = _cribo.types.SimpleNamespace(__name__='myrequests.exceptions', __initializing__=False, __initialized__=False)
_cribo_finder.bind('myrequests.exceptions', myrequests_exceptions)
myrequests.exceptions = myrequests_exceptions
myrequests_utils = _cribo.types.SimpleNamespace(__name__='myrequests.utils', __initializing__=False, __initialized__=False)
_cribo_finder.bind('myrequests.utils', myrequests_utils)
myrequests.utils = myrequests_utils
def _cribo_init___cribo_a5ac5e_myrequests(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'myrequests'
    _cribo_self.__doc__ = 'Main package that imports from multiple submodules.'
    global myrequests_compat, myrequests_cookies, myrequests_exceptions, myrequests_utils
    """Main package that imports from multiple submodules."""
    myrequests_compat = _cribo_init___cribo_5ad29b_myrequests_compat(myrequests_compat)
    compat = myrequests.compat
    _cribo_self.compat = compat
    myrequests_cookies = _cribo_init___cribo_135ee1_myrequests_cookies(myrequests_cookies)
    cookies = myrequests.cookies
    _cribo_self.cookies = cookies
    myrequests_exceptions = _cribo_init___cribo_530a30_myrequests_exceptions(myrequests_exceptions)
    exceptions = myrequests.exceptions
    _cribo_self.exceptions = exceptions
    myrequests_utils = _cribo_init___cribo_ce8acb_myrequests_utils(myrequests_utils)
    utils = myrequests.utils
    _cribo_self.utils = utils
    myrequests_cookies = _cribo_init___cribo_135ee1_myrequests_cookies(myrequests_cookies)
    CookieJar = myrequests_cookies.CookieJar
    _cribo_self.CookieJar = CookieJar
    _cribo_self.CookieJar = CookieJar
    myrequests_exceptions = _cribo_init___cribo_530a30_myrequests_exceptions(myrequests_exceptions)
    JSONDecodeError = myrequests_exceptions.JSONDecodeError
    _cribo_self.JSONDecodeError = JSONDecodeError
    _cribo_self.JSONDecodeError = JSONDecodeError
    myrequests_utils = _cribo_init___cribo_ce8acb_myrequests_utils(myrequests_utils)
    decode_json = myrequests_utils.decode_json
    _cribo_self.decode_json = decode_json
    _cribo_self.decode_json = decode_json
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
myrequests.__init__ = _cribo_init___cribo_a5ac5e_myrequests
def _cribo_init___cribo_135ee1_myrequests_cookies(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'myrequests'
    _cribo_self.__doc__ = "Cookies module that uses compat's MutableMapping in class inheritance."
    global myrequests_compat
    """Cookies module that uses compat's MutableMapping in class inheritance."""
    myrequests_compat = _cribo_init___cribo_5ad29b_myrequests_compat(myrequests_compat)
    cookielib = myrequests.compat.cookielib
    _cribo_self.cookielib = cookielib
    _cribo_self.cookielib = cookielib
    MutableMapping = myrequests.compat.MutableMapping
    _cribo_self.MutableMapping = MutableMapping
    _cribo_self.MutableMapping = MutableMapping
    urlparse = myrequests.compat.urlparse
    _cribo_self.urlparse = urlparse
    _cribo_self.urlparse = urlparse

    class CookieJar(cookielib.CookieJar, MutableMapping):
        """A cookie jar that also implements the MutableMapping interface."""

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'myrequests.cookies'), _cribo_f)[1])
        def __init__(self):
            super().__init__()
            self._cookies = {}

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'myrequests.cookies'), _cribo_f)[1])
        def __getitem__(self, name):
            return self._cookies[name]

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'myrequests.cookies'), _cribo_f)[1])
        def __setitem__(self, name, value):
            self._cookies[name] = value

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'myrequests.cookies'), _cribo_f)[1])
        def __delitem__(self, name):
            del self._cookies[name]

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'myrequests.cookies'), _cribo_f)[1])
        def __iter__(self):
            return iter(self._cookies)

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'myrequests.cookies'), _cribo_f)[1])
        def __len__(self):
            return len(self._cookies)

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'myrequests.cookies'), _cribo_f)[1])
        def get(self, name, default=None):
            return self._cookies.get(name, default)

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'myrequests.cookies'), _cribo_f)[1])
        def set(self, name, value):
            self._cookies[name] = value
    CookieJar.__module__ = 'myrequests.cookies'
    CookieJar.__qualname__ = 'CookieJar'
    _cribo_self.CookieJar = CookieJar
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
myrequests_cookies.__init__ = _cribo_init___cribo_135ee1_myrequests_cookies
def _cribo_init___cribo_530a30_myrequests_exceptions(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'myrequests'
    _cribo_self.__doc__ = 'Exceptions module that uses compat types in class inheritance.'
    global myrequests_compat
    """Exceptions module that uses compat types in class inheritance."""
    myrequests_compat = _cribo_init___cribo_5ad29b_myrequests_compat(myrequests_compat)
    CompatJSONDecodeError = myrequests.compat.JSONDecodeError
    _cribo_self.CompatJSONDecodeError = CompatJSONDecodeError
    _cribo_self.CompatJSONDecodeError = CompatJSONDecodeError

    class RequestException(Exception):
        """Base exception for all request errors."""
        pass
    RequestException.__module__ = 'myrequests.exceptions'
    RequestException.__qualname__ = 'RequestException'
    _cribo_self.RequestException = RequestException

    class InvalidJSONError(RequestException):
        """A JSON error occurred."""
        pass
    InvalidJSONError.__module__ = 'myrequests.exceptions'
    InvalidJSONError.__qualname__ = 'InvalidJSONError'
    _cribo_self.InvalidJSONError = InvalidJSONError

    class JSONDecodeError(InvalidJSONError, CompatJSONDecodeError):
        """Couldn't decode the text into json."""
        pass
    JSONDecodeError.__module__ = 'myrequests.exceptions'
    JSONDecodeError.__qualname__ = 'JSONDecodeError'
    _cribo_self.JSONDecodeError = JSONDecodeError
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
myrequests_exceptions.__init__ = _cribo_init___cribo_530a30_myrequests_exceptions
def _cribo_init___cribo_ce8acb_myrequests_utils(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'myrequests'
    _cribo_self.__doc__ = 'Utils module that also uses compat.'
    global myrequests_compat
    """Utils module that also uses compat."""
    myrequests_compat = _cribo_init___cribo_5ad29b_myrequests_compat(myrequests_compat)
    json = myrequests.compat.json
    _cribo_self.json = json
    _cribo_self.json = json
    builtin_str = myrequests.compat.builtin_str
    _cribo_self.builtin_str = builtin_str
    _cribo_self.builtin_str = builtin_str

    def to_native_string(string):
        """Convert to native string type."""
        if isinstance(string, builtin_str):
            return string
        return str(string)
    to_native_string.__module__ = 'myrequests.utils'
    to_native_string.__qualname__ = 'to_native_string'
    _cribo_self.to_native_string = to_native_string

    def decode_json(content):
        """Decode JSON content."""
        try:
            return _cribo.json.loads(content)
        except (ValueError, TypeError) as e:
            OurJSONDecodeError = _cribo_init___cribo_530a30_myrequests_exceptions(globals()['myrequests_exceptions']).JSONDecodeError
            raise OurJSONDecodeError(str(e))
    decode_json.__module__ = 'myrequests.utils'
    decode_json.__qualname__ = 'decode_json'
    _cribo_self.decode_json = decode_json
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
myrequests_utils.__init__ = _cribo_init___cribo_ce8acb_myrequests_utils
"""Test that mimics requests' pattern causing forward reference."""
__cribo_init_result = _cribo_init___cribo_a5ac5e_myrequests(myrequests)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(myrequests, attr, getattr(__cribo_init_result, attr))
jar = myrequests.CookieJar()
jar.set("test", "value")
print(f"Cookie: {jar.get('test')}")
print(f"JSONDecodeError MRO: {[c.__name__ for c in myrequests.JSONDecodeError.__mro__]}")
print("Test completed")
utils = myrequests.utils
exceptions = myrequests.exceptions
cookies = myrequests.cookies
compat = myrequests.compat
