crates/cribo/tests/snapshots/bundled_code@fstring_globals_lifting.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/fstring_globals_lifting/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""Test fixture for f-string globals lifting"""
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
result = "initial"
counter = 0
values = [1, 2, 3]
def simple_fstring():
    """Test basic f-string with global variable"""
    global result
    result = "modified"
    return f"Result is: {result}"
def complex_fstring():
    """Test complex f-string expressions"""
    global counter, values
    counter += 1
    values.append(counter)
    return f"Count: {counter:03d}, Sum: {sum(values)}, Max: {max(values)}"
def nested_fstring():
    """Test nested expressions in f-string"""
    global result
    result = f"nested_{result}"
    return f"Result: {result.upper()}, Length: {len(result)}"
def fstring_with_format():
    """Test f-string with format specifications"""
    global counter
    counter = 42
    return f"Decimal: {counter:d}, Hex: {counter:#x}, Binary: {counter:08b}"
if __name__ == "__main__":
    print(simple_fstring())
    print(f"Module result: {result}")
    print(complex_fstring())
    print(f"Module counter: {counter}, values: {values}")
    print(nested_fstring())
    print(f"Final result: {result}")
    print(fstring_with_format())
    print(f"Final counter: {counter}")
